[package]
name = "jasous"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.28"
hyper = { version = "0.14.26", features = ["full"] }
tokio = { version = "1.27.0", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }

tracing = "0.1.37"
tracing-subscriber = "0.3.17"
http = "0.2.9"
hyper-tls = "0.5.0"
dotenv = "0.15.0"
anyhow = "1.0.71"
